Release 1.3 (#176)
* Set version to 1.3-SNAPSHOT

* Update readme

* Switch to Java 14

* Add notice about HiDPI support

* Update settings labels

* Update documentation

* Work to deprecate Tool.assetRefreshed()

* Fix cannot close new assets that the user does not want to save

* Remove use of Tool.assetRefreshed()

* More cleanup

* Programmer notes

* Refactor ProgramTool to separate ready() and open() methods

* Separate tool ready() and open() methods

* Set active tool to guided tool on guide selection change

* Separate tool ready() and open() methods

* Separate tool ready() and open() methods

* Cleanup

* Fix hidpi check

* Trigger build

* Trigger build

* Fix logging messages

* Fix tool timeout loading about tool

* Cleanup

* Improve the tool patterns

* Merge OpenToolRequest with OpenAssetRequest

* Merge OpenToolRequest with OpenAssetRequest

* Fix problem restoring tools

* Cleanup

* Update documentation

* Update documentation

* Start work on open asset tool

* Refactor how asset types are registered

* Refactor how asset types are registered

* Refactor how tool guides are created

* Refactor how tool guides are created

* Documentation tweaks

* Add new asset icons

* Continue work on asset tool

* Add icon column

* Resize columns to fit table

* Continue work on asset tool

* Continue work on asset tool

* Continue work on asset tool

* Continue work on asset tool

* Continue work on asset tool

* Continue work on asset tool

* Continue work on asset tool

* Continue work on asset tool

* Fix typo

* Continue work on flat icons

* Continue work on flat icons

* Continue work on flat icons

* Continue work on flat icons

* Continue work on flat icons

* Continue work on flat icons

* Continue work on asset tool

* Fix delete key problem

* Continue work on flat icons

* Continue work on flat icons

* Continue work on flat ico