@@ -1,9 +1,9 @@
 package com.avereon.xenon.workpane;
 
-import com.avereon.settings.Settings;
-import com.avereon.util.Configurable;
-import javafx.beans.property.DoubleProperty;
-import javafx.beans.property.SimpleDoubleProperty;
+import com.avereon.skill.Identity;
+import com.avereon.skill.WritableIdentity;
+import com.avereon.util.IdGenerator;
+import javafx.beans.property.*;
 import javafx.css.*;
 import javafx.geometry.Orientation;
 import javafx.geometry.Point2D;
@@ -12,7 +12,6 @@ import javafx.scene.control.Control;
 import javafx.scene.control.Skin;
 import javafx.scene.input.MouseEvent;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
@@ -21,7 +20,7 @@ import java.util.concurrent.CopyOnWriteArraySet;
 /**
  * Created by ecco on 5/29/17.
  */
-public class WorkpaneEdge extends Control implements Configurable {
+public class WorkpaneEdge extends Control implements WritableIdentity {
 
 	private static final PseudoClass HORIZONTAL_PSEUDOCLASS_STATE = PseudoClass.getPseudoClass( "horizontal" );
 
@@ -29,13 +28,15 @@ public class WorkpaneEdge extends Control implements Configurable {
 
 	private StyleableObjectProperty<Orientation> orientation;
 
-	private WorkpaneEdge topEdge;
+	private final Side wall;
 
-	private WorkpaneEdge leftEdge;
+	private ObjectProperty<WorkpaneEdge> topEdge;
 
-	private WorkpaneEdge rightEdge;
+	private ObjectProperty<WorkpaneEdge> leftEdge;
 
-	private WorkpaneEdge bottomEdge;
+	private ObjectProperty<WorkpaneEdge> rightEdge;
+
+	private ObjectProperty<WorkpaneEdge> bottomEdge;
 
 	Set<WorkpaneView> topViews;
 
@@ -46,31 +47,29 @@ public class WorkpaneEdge extends Control implements Configurable {
 	Set<WorkpaneView> rightViews;
 
 	/**
-	 * <p>Represents the location where the divider should ideally be positioned, between 0.0 and 1.0 (inclusive) when the position is relative. 0.0 represents the left- or top-most point, and 1.0 represents the right- or bottom-most point
-	 * (depending on the orientation property).
-	 * <p>
-	 * <p>As the user drags the edge around this property will be updated to always represent its current location.
+	 * <p>The location where the divider should ideally be positioned, between 0.0
+	 * and 1.0 (inclusive) when the position is relative. 0.0 represents the
+	 * left-most or top-most point, and 1.0 represents the right-most or
+	 * bottom-most point (depending on the orientation property).
+	 * <p>As the user drags the edge around this property will be updated to
+	 * always represent its current location.
 	 */
 	private DoubleProperty position;
 
-	private boolean absolute;
-
-	private Side side;
-
 	private Workpane parent;
 
-	private Settings settings;
-
-	public WorkpaneEdge( Orientation orientation ) {
-		this( orientation, null );
+	public WorkpaneEdge() {
+		this( null );
 	}
 
-	public WorkpaneEdge( Orientation orientation, Side side ) {
+	WorkpaneEdge( Side wall ) {
 		getStyleClass().add( "workpane-edge" );
-		setOrientation( orientation );
+
+		setUid( IdGenerator.getId() );
 		setSnapToPixel( true );
 		setPosition( 0 );
-		this.side = side;
+
+		this.wall = wall;
 
 		// Create the view lists.
 		Set<WorkpaneView> viewsA = new CopyOnWriteArraySet<>();
@@ -90,13 +89,18 @@ public class WorkpaneEdge extends Control implements Configurable {
 	}
 
 	final boolean isWall() {
-		return side != null;
+		return wall != null;
 	}
 
-	public String getEdgeId() {
-		if( settings != null ) return settings.getName();
-		if( side != null ) return side.name().toLowerCase();
-		return null;
+	@Override
+	public String getUid() {
+		if( isWall() ) return wall.name().toLowerCase();
+		return getProperties().get( Identity.KEY ).toString();
+	}
+
+	@Override
+	public void setUid( String id ) {
+		getProperties().put( Identity.KEY, id );
 	}
 
 	/**
@@ -106,8 +110,9 @@ public class WorkpaneEdge extends Control implements Configurable {
 	 *
 	 * @param value the orientation value
 	 */
-	private void setOrientation( Orientation value ) {
+	public WorkpaneEdge setOrientation( Orientation value ) {
 		orientationProperty().set( value );
+		return this;
 	}
 
 	/**
@@ -115,7 +120,7 @@ public class WorkpaneEdge extends Control implements Configurable {
 	 *
 	 * @return The orientation for the WorkpaneEdge.
 	 */
-	public final Orientation getOrientation() {
+	public Orientation getOrientation() {
 		return orientation == null ? Orientation.VERTICAL : orientation.get();
 	}
 
@@ -124,7 +129,7 @@ public class WorkpaneEdge extends Control implements Configurable {
 	 *
 	 * @return the orientation property for the WorkpaneEdge
 	 */
-	private StyleableObjectProperty<Orientation> orientationProperty() {
+	public StyleableObjectProperty<Orientation> orientationProperty() {
 		if( orientation == null ) {
 			orientation = new StyleableObjectProperty<>( null ) {
 
@@ -155,18 +160,69 @@ public class WorkpaneEdge extends Control implements Configurable {
 		return orientation;
 	}
 
-	public final double getPosition() {
+	public double getPosition() {
 		return position == null ? 0.5F : position.get();
 	}
 
-	final void setPosition( double value ) {
-		positionProperty().set( value );
-		if( settings != null ) settings.set( "position", value );
+	public void setPosition( double value ) {
+		((DoubleProperty)positionProperty()).set( value );
 	}
 
-	final DoubleProperty positionProperty() {
+	public ReadOnlyDoubleProperty positionProperty() {
 		if( position == null ) position = new SimpleDoubleProperty( this, "position", 0 );
 		return position;
+	}
+
+	public WorkpaneEdge getTopEdge() {
+		return topEdge == null ? null : topEdgeProperty().get();
+	}
+
+	public void setTopEdge( WorkpaneEdge topEdge ) {
+		((ObjectProperty<WorkpaneEdge>)topEdgeProperty()).set( topEdge );
+	}
+
+	public ReadOnlyObjectProperty<WorkpaneEdge> topEdgeProperty() {
+		if( topEdge == null ) topEdge = new SimpleObjectProperty<>();
+		return topEdge;
+	}
+
+	public WorkpaneEdge getLeftEdge() {
+		return leftEdge == null ? null : leftEdgeProperty().get();
+	}
+
+	public void setLeftEdge( WorkpaneEdge leftEdge ) {
+		((ObjectProperty<WorkpaneEdge>)leftEdgeProperty()).set( leftEdge );
+	}
+
+	public ReadOnlyObjectProperty<WorkpaneEdge> leftEdgeProperty() {
+		if( leftEdge == null ) leftEdge = new SimpleObjectProperty<>();
+		return leftEdge;
+	}
+
+	public WorkpaneEdge getRightEdge() {
+		return rightEdge == null ? null : rightEdgeProperty().get();
+	}
+
+	public void setRightEdge( WorkpaneEdge rightEdge ) {
+		((ObjectProperty<WorkpaneEdge>)rightEdgeProperty()).set( rightEdge );
+	}
+
+	public ReadOnlyObjectProperty<WorkpaneEdge> rightEdgeProperty() {
+		if( rightEdge == null ) rightEdge = new SimpleObjectProperty<>();
+		return rightEdge;
+	}
+
+	public WorkpaneEdge getBottomEdge() {
+		return bottomEdge == null ? null : bottomEdgeProperty().get();
+	}
+
+	public void setBottomEdge( WorkpaneEdge bottomEdge ) {
+		((ObjectProperty<WorkpaneEdge>)bottomEdgeProperty()).set( bottomEdge );
+	}
+
+	public ReadOnlyObjectProperty<WorkpaneEdge> bottomEdgeProperty() {
+		if( bottomEdge == null ) bottomEdge = new SimpleObjectProperty<>();
+		return bottomEdge;
 	}
 
 	Workpane getWorkpane() {
@@ -181,16 +237,16 @@ public class WorkpaneEdge extends Control implements Configurable {
 
 		switch( direction ) {
 			case TOP: {
-				return topEdge;
+				return getTopEdge();
 			}
 			case BOTTOM: {
-				return bottomEdge;
+				return getBottomEdge();
 			}
 			case LEFT: {
-				return leftEdge;
+				return getLeftEdge();
 			}
 			case RIGHT: {
-				return rightEdge;
+				return getRightEdge();
 			}
 		}
 
@@ -200,23 +256,19 @@ public class WorkpaneEdge extends Control implements Configurable {
 	public void setEdge( Side direction, WorkpaneEdge edge ) {
 		switch( direction ) {
 			case TOP: {
-				topEdge = edge;
-				if( settings != null ) settings.set( "t", edge == null ? null : edge.getEdgeId() );
+				setTopEdge( edge );
 				break;
 			}
 			case LEFT: {
-				leftEdge = edge;
-				if( settings != null ) settings.set( "l", edge == null ? null : edge.getEdgeId() );
+				setLeftEdge( edge );
 				break;
 			}
 			case RIGHT: {
-				rightEdge = edge;
-				if( settings != null ) settings.set( "r", edge == null ? null : edge.getEdgeId() );
+				setRightEdge( edge );
 				break;
 			}
 			case BOTTOM: {
-				bottomEdge = edge;
-				if( settings != null ) settings.set( "b", edge == null ? null : edge.getEdgeId() );
+				setBottomEdge( edge );
 				break;
 			}
 		}
@@ -238,41 +290,18 @@ public class WorkpaneEdge extends Control implements Configurable {
 			}
 		}
 
-		return null;
+		return Set.of();
 	}
 
 	@Override
-	public void setSettings( Settings settings ) {
-		if( settings == null ) {
-			this.settings = null;
-			return;
-		} else if( this.settings != null ) {
-			return;
-		}
-
-		this.settings = settings;
-
-		// Restore state from settings
-		if( settings.get( "position" ) != null ) setPosition( settings.get( "position", Double.class ) );
-
-		// Persist state to settings
-		settings.set( "orientation", getOrientation().name().toLowerCase() );
-		settings.set( "position", getPosition() );
-	}
-
-	@Override
-	public Settings getSettings() {
-		return settings;
-	}
-
-	@Override
+	@SuppressWarnings( "StringBufferReplaceableByString" )
 	public String toString() {
 		StringBuilder builder = new StringBuilder();
 
 		builder.append( "<" );
 		builder.append( getClass().getSimpleName() );
 		builder.append( " id=" );
-		builder.append( getEdgeId() );
+		builder.append( getUid() );
 		builder.append( " orientation=" );
 		builder.append( getOrientation() );
 		builder.append( " position=" );
@@ -300,6 +329,7 @@ public class WorkpaneEdge extends Control implements Configurable {
 
 	private static class StyleableProperties {
 
+		@SuppressWarnings( "unused" )
 		private static final List<CssMetaData<? extends Styleable, ?>> STYLEABLES;
 
 		private static final StyleConverter<String, Orientation> converter = StyleConverter.getEnumConverter( Orientation.class );
@@ -323,9 +353,7 @@ public class WorkpaneEdge extends Control implements Configurable {
 		};
 
 		static {
-			final List<CssMetaData<? extends Styleable, ?>> styleables = new ArrayList<>( Control.getClassCssMetaData() );
-			styleables.add( ORIENTATION );
-			STYLEABLES = Collections.unmodifiableList( styleables );
+			STYLEABLES = Collections.unmodifiableList( List.of( ORIENTATION ) );
 		}
 
 	}
